design ready for v0.2: just displaying bungee and river surf spots side-by-side, no colors yet

--- a/src/App.css
+++ b/src/App.css
@@ -4,48 +4,68 @@
   min-height: 100vh;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
-  background-color: rgb(221, 221, 221);
   /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: black;
   padding-bottom: 2.5rem;
+  /* list-style: none; */
 }
+
+.surfspots {
+  display: flex;
+  flex-direction: row;
+  /* TODO: why can't I remove list dots when display is flex? */
+  /* list-style: none; */
+  justify-content: space-evenly;
+  flex-flow: row wrap;
+}
+
+/* .riversurf {
+  background-color: aquamarine;
+} */
 
 .Link {
   color: rgb(0, 184, 230);
+}
+
+ul {
+  list-style-type: none;
 }
 
 .Footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;
+  box-sizing: border-box;
+  height: 3rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px 0;
-  flex-wrap: wrap;
+  /* justify-content: center; */
+  /* align-items: center; */
+  margin: 0;
+  /* flex-wrap: wrap; */
   list-style: none;
+  flex-flow: row wrap;
+  background-color: rgb(221, 221, 221);
 }
 
 .Footer_item {
-  margin: auto;
+  margin: 8px auto;
 }
 
 /* for future use */
