--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,17 @@
 .App {
   text-align: center;
-  position: relative;
+  display: flex;
   min-height: 100vh;
+  flex-direction: column; /* stack everything */
+}
+
+h1 {
+  margin-block-end: 0%;
+}
+
+p {
+  font-size: 92%;
+  margin-block-start: 0%;
 }
 
 /* .App-logo {
@@ -16,60 +26,129 @@
 } */
 
 .App-header {
-  /* min-height: 100vh; */
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  /* justify-content: center; */
+  flex: 1; /* header gets all remaining space on screen not taken by footer*/
   font-size: calc(10px + 2vmin);
-  color: black;
-  padding-bottom: 2.5rem;
-  /* list-style: none; */
+  color: #000000;
 }
 
 .surfspots {
   display: flex;
   flex-direction: row;
-  /* TODO: why can't I remove list dots when display is flex? */
-  /* list-style: none; */
   justify-content: space-evenly;
   flex-flow: row wrap;
+  color: #3bbae8;
+}
+
+.spot {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 10px;
+  color: #000000;
+}
+
+.spotname {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  grid-row: 1 / 3;
+  font-size: 130%;
+  font-weight: bold;
+  /* background-color: blueviolet; */
+}
+
+.spotname a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.meas {
+  text-align: left;
+  font-weight: bold;
+}
+
+.unit {
+  font-size: 70%;
+}
+
+.flow {
+  /* background-color: cadetblue; */
+  display: flex;
+  align-items: flex-end;
+  font-size: 120%;
+}
+
+.temp {
+  display: flex;
+
+  font-size: 90%;
+  /* background-color: coral; */
+}
+
+/* colors for flow */
+.flow_bad {
+  color: #e2576f;
+}
+.flow_ok {
+  color: #f8cd4c;
+}
+.flow_good {
+  color: #409073;
+}
+.flow_danger {
+  color: #e2576f;
+}
+
+/* colors for temperature */
+.temp_0 {
+  color: #5944fa;
+}
+.temp_1 {
+  color: #3b91f4;
+}
+.temp_2 {
+  color: #7cecae;
+}
+.temp_3 {
+  color: #f6db2a;
+}
+.temp_4 {
+  color: #ec5529;
 }
 
 /* .riversurf {
   background-color: aquamarine;
 } */
 
-.Link {
+/* .Link {
   color: rgb(0, 184, 230);
-}
+} */
 
 ul {
-  list-style-type: none;
+  list-style: none;
+  padding-left: 0;
 }
 
 .Footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  box-sizing: border-box;
-  height: 3rem;
+  padding: 1.25rem 1.875rem;
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
-  margin: 0;
-  /* flex-wrap: wrap; */
-  list-style: none;
-  flex-flow: row wrap;
-  background-color: rgb(221, 221, 221);
+  flex-wrap: wrap;
+  justify-content: space-between;
+  color: white;
+  background-color: #3bbae8;
+}
+
+.Footer a:visited {
+  color: white;
 }
 
 .Footer_item {
-  margin: 8px auto;
+  margin: auto;
+  padding: 1rem;
+  min-width: 12.5rem /*200px*/;
 }
 
 /* for future use */
-.temperature_bar {
+/* .temperature_bar {
   background: rgb(0, 18, 159);
   background: linear-gradient(
     90deg,
@@ -89,4 +168,4 @@ ul {
     rgba(129, 223, 25, 1) 75%,
     rgba(9, 119, 13, 1) 100%
   );
-}
+} */
